[package]
name = "cubestore-sql-tests"
version = "0.1.0"
authors = ["Cube Dev, Inc."]
edition = "2021"
license = "Apache-2.0"
description = "Tests for CubeStore that can run in multiple configurations."
documentation = "https://cube.dev/docs"
homepage = "https://cube.dev"
repository = "https://github.com/cube-js/cube.js"
resolver = "2"

[lib]
test = false

[[test]]
name = "in-process"
path = "tests/in_process.rs"
harness = false

[[test]]
name = "multi-process"
path = "tests/multi_process.rs"
harness = false

[[test]]
name = "cluster"
path = "tests/cluster.rs"
harness = false

[target.'cfg(not(target_os = "windows"))'.dependencies]
ipc-channel = { version = "0.18.0" }

[dependencies]
base64 = "0.13.0"
async-compression = { version = "0.3.7", features = ["gzip", "tokio"] }
async-trait = "0.1.36"
cubestore = { path = "../cubestore" }
flate2 = "1.0.22"
itertools = "0.9.0"
log = "0.4.11"
pretty_assertions = "0.7.1"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls", "stream", "http2"], default-features = false }
scopeguard = "1.1.0"
serde = "1.0.115"
serde_derive = "1.0.115"
tokio = { version = "1", features = ["full", "rt"] }
indoc = "1.0"
tempfile = "3.2.0"
tar = "0.4.38"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
cuberockstore = { path = "../cuberockstore" }

[[bench]]
name = "in_process"
harness = false
